---
source: src/tests.rs
expression: ast
input_file: src/examples/invalid/dynamic/array-list-negative.ra
---
Main(([], [
    Assignment(false, Id(a), ArrayDeclaration(INT, 3, None)),
    Assignment(false, ArrayDeclaration(a, Integer(0), None), Integer(0)),
    Assignment(false, ArrayDeclaration(a, BinaryOperation(Minus, ArrayDeclaration(a, Integer(0), None), Integer(1)), None), Integer(0)),
    Write([ArrayDeclaration(a, Integer(0), None)]),
]))
